--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -337,7 +337,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 .counter-section {
   background: url(../img/background/bg-1.jpg);
   background-size: cover; /* Added */
-  background-position: center;
+  /*background-position: center;*/
   overflow: hidden;
   position: relative;
 }
